--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,14 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "build/server/index.js",
-      "use": "@vercel/node",
-      "config": { "runtime": "nodejs20.x" }
-    },
-    {
-      "src": "build/client/**",
-      "use": "@vercel/static"
+  "version": 3,
+  "functions": {
+    "api/server.js": {
+      "runtime": "nodejs20.x"
     }
-  ],
+  },
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "build/server/index.js"
+      "dest": "/api/server.js"
     }
   ]
 }
