Fix Vercel v2 config for SSR

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
-  "version": 3,
-  "functions": {
-    "api/server.js": {
-      "runtime": "nodejs20.x"
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/server.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "build/client/**",
+      "use": "@vercel/static"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/(.*)",
