--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/server.js",
-      "use": "@vercel/node"
-    },
-    {
       "src": "build/client/**",
       "use": "@vercel/static"
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/server.js"
-    }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
