--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"color2k": "^2.0.3",
 		"date-fns": "^4.1.0",
 		"downshift": "^9.0.9",
+		"express": "^5.1.0",
 		"isbot": "^5.1.27",
 		"lodash-es": "^4.17.21",
 		"lucide-react": "0.358.0",
