--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,16 @@
 {
-  "buildCommand": "npm run build",
-  "installCommand": "npm install",
-  "outputDirectory": "build/client",
-  "functions": {
-    "api/server.js": {
-      "runtime": "nodejs20.x"
+  "version": 2,
+  "builds": [
+    {
+      "src": "build/client/**",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "src/app/api/server.js",
+      "use": "@vercel/node"
     }
-  },
-  "framework": null
+  ],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/api/server.js" }
+  ]
 }
