--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-  "version": 2,
+  "version": 3,
   "builds": [
-    { "src": "build/client/**", "use": "@vercel/static" },
     { "src": "src/app/api/server.js", "use": "@vercel/node" }
   ],
-  "rewrites": [{ "source": "/(.*)", "destination": "/api/server.js" }]
+  "routes": [
+    { "src": "/(.*)", "dest": "/src/app/api/server.js" }
+  ]
 }
