--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
-  "version": 3,
-  "builds": [
-    { "src": "src/app/api/server.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/src/app/api/server.js" }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
